--- a/style.css
+++ b/style.css
@@ -53,11 +53,17 @@ html,body{
 button{
     padding: 10px 34px;
     border: none;
-    background-color: blue;
+    
     color: white;
     border-radius: 5px;
     margin-top: 20px;
     transition: all 0.4s ease;
+}
+.Blue{
+    background-color: blue;
+}
+.Red{
+    background-color: red;
 }
 button:hover{
     transform: scale(1.05);
@@ -67,7 +73,12 @@ button:active{
     transform: scale(1);
     box-shadow: 0 4px 8px rgba(1, 1, 1, 0.2);
 }
-
+#Stranger{
+    color: rgba(0, 0, 0, 0.597);
+}
+#Friend{
+    color: blue;
+}
 p{
     font-size: 12px;
 }
